// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput.vue renders OXD FileInput 1`] = `
<input type="file" class="oxd-file-input">
<div class="oxd-file-div oxd-file-div--active">
  <!--v-if-->
  <div class="oxd-file-input-div">No file chosen</div><i class="oxd-icon oxd-icon--medium bi-upload oxd-file-input-icon"></i>
</div>
`;

exports[`FileInput.vue should renders OXD FileInput with browse button 1`] = `
<input type="file" class="oxd-file-input">
<div class="oxd-file-div oxd-file-div--active">
  <div class="oxd-file-button">Browse</div>
  <div class="oxd-file-input-div">No file chosen</div><i class="oxd-icon oxd-icon--medium bi-upload oxd-file-input-icon"></i>
</div>
`;

exports[`FileInput.vue should renders OXD FileInput with custom color 1`] = `
<input type="file" class="oxd-file-input">
<div class="oxd-file-div oxd-file-div--active" style="background-color: aliceblue;">
  <!--v-if-->
  <div class="oxd-file-input-div">No file chosen</div><i class="oxd-icon oxd-icon--medium bi-upload oxd-file-input-icon"></i>
</div>
`;

exports[`FileInput.vue should renders OXD FileInput with error 1`] = `
<input type="file" class="oxd-file-input">
<div class="oxd-file-div oxd-file-div--active oxd-file-div--error">
  <!--v-if-->
  <div class="oxd-file-input-div">No file chosen</div><i class="oxd-icon oxd-icon--medium bi-upload oxd-file-input-icon"></i>
</div>
`;
